--- a/final-project.ipynb
+++ b/final-project.ipynb
@@ -2,60 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import math"
+    "import math\n",
+    "from numba import jit\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data = np.loadtxt(\"data.txt\", dtype = \"float\", delimiter = \" \")\n",
-    "X = data.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "U, s, V = np.linalg.svd(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "@jit\n",
     "def thresh(z,delta):\n",
     "    return np.sign(z)*(np.abs(z) >= delta)*(np.abs(z)-delta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def ssvd(X,threu = 1, threv = 1, gamu = 2, gamv =2,u0 =U.T[0], v0 = V.T[0],merr = 10**(-4), niter = 100 ):\n",
+    "@jit\n",
+    "def ssvd(X, gamu = 2, gamv = 2,u0, v0, merr = 10**(-4), niter = 100 ):\n",
     "    n = X.shape[0]\n",
     "    d = X.shape[1]\n",
     "    ud = 1\n",
@@ -65,7 +46,7 @@
     "    while (ud > merr or vd > merr):\n",
     "        print(iters)\n",
     "        iters = iters +1\n",
-    "         # Updating v\n",
+    "        # Updating v\n",
     "        z =  X.T @ u0\n",
     "        winv = np.abs(z)**gamv\n",
     "        sigsq = np.abs(SST - np.sum(z*z))/(n*d-d)\n",
@@ -125,12 +106,13 @@
     "        \n",
     "        u0 = u1\n",
     "        v0 = v1\n",
-    "    return u1,v1,iters"
+    "    s = u1[None, :] @ X @ v1[:, None]\n",
+    "    return u1, v1, s, iters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -149,12 +131,28 @@
     }
    ],
    "source": [
-    "res = ssvd(X)"
+    "data = np.loadtxt(\"data.txt\", dtype = \"float\", delimiter = \" \")\n",
+    "X = data.T\n",
+    "U, s, V = np.linalg.svd(X)\n",
+    "u0 = U.T[0]\n",
+    "v0 = V.t[0]\n",
+    "res = ssvd(X, u0 = u0, v0 = v0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "layer = res[2] * res[0][:, None] * res[1][None, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -162,30 +160,15 @@
     {
      "data": {
       "text/plain": [
-       "(array([-0.18018641, -0.2111319 , -0.10737516, -0.15574824, -0.15112323,\n",
-       "        -0.16025416, -0.19018526, -0.16695614, -0.19288482, -0.1101655 ,\n",
-       "        -0.13320652, -0.16567419, -0.18539703, -0.13521102, -0.17296825,\n",
-       "        -0.11586789, -0.19550012, -0.06831533, -0.17865369, -0.19547649,\n",
-       "         0.09094302,  0.04679269,  0.08135216,  0.0319133 ,  0.05270603,\n",
-       "         0.0326062 ,  0.08880033,  0.07646915,  0.07221645,  0.04541018,\n",
-       "         0.06393339,  0.0096247 , -0.01926316,  0.16077355,  0.15437588,\n",
-       "         0.15564448,  0.13808241,  0.14590629,  0.15895225,  0.16920658,\n",
-       "         0.17449384,  0.15142279,  0.1758557 ,  0.13815952,  0.14764779,\n",
-       "         0.14680345,  0.1735995 ,  0.14234025,  0.12499649,  0.1455915 ,\n",
-       "         0.07617165, -0.03848219, -0.04149155,  0.0123531 , -0.        ,\n",
-       "        -0.11083854]),\n",
-       " array([ 0.       ,  0.0126103,  0.       , ...,  0.       ,  0.       ,  0.       ]),\n",
-       " 6)"
+       "(56, 12625)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "res "
-   ]
+   "source": []
   }
  ],
  "metadata": {
